# A-Eye

./: .gitattributes  .gitignore  Doxyfile  README.md
A-Eye_Controller/: A-Eye Controller.sln  README.md
A-Eye_Controller/A-Eye_Controller/: A-Eye Controller.csproj  ConfigFile.cs  Controller.Designer.cs  Controller.cs  Controller.resx  FlexibleMessageBox.cs  Program.cs  SubProcess.cs  last_config.json  test.py
A-Eye_Controller/A-Eye_Controller/A-Eye_Communication/: Doxyfile  client.py  decodageTM.py  encodageTC.py  localCom.py  pipeClient.py  requirements.txt
A-Eye_Controller/A-Eye_Controller/Properties/: Resources.Designer.cs  Settings.Designer.cs
A-Eye_Controller/A-Eye_Controller/StockagePC/: Doxyfile  README.md  run_stockage.py  test.py
A-Eye_Controller/SpecFlowProject1/: SpecFlowProject1.csproj  allureConfig.json
A-Eye_Controller/SpecFlowProject1/Features/: A-Eye.feature  A-Eye.feature.cs  Connection.feature  Connection.feature.cs  Interaction.feature  Interaction.feature.cs
A-Eye_Controller/SpecFlowProject1/StepDefinitions/: A_EyeStepDefinitions.cs  ConnectionStepDefinitions.cs  InteractionStepDefinitions.cs
A-Eye_DatasetBuilder/: README.md  jpgtobmp.py  resize.py  sort.py
A-Eye_Documentation/: README.md  export_drawio.ps1
A-Eye_Documentation/drawio/: mqtt.drawio
A-Eye_Documentation/plantuml/: A-Eye.plantuml  A-Eye_Communication.plantuml  A-Eye_Controller.plantuml  A-Eye_Visor.plantuml  A-Eye_arboresence.plantuml
A-Eye_FPGA/: README.md
A-Eye_FPGA/conv_2d_vhdl/: README.md  cmp_conv_2d.vhd  tb_conv_2d.vhd  tb_conv_2d_padding.vhd
A-Eye_FPGA/conv_v1/: cmp_conv_2d.vhd  cmp_conv_2d_padding.vhd  conv_pkg.vhd  tb_conv_2d.vhd
A-Eye_FPGA/conv_v2/: axi_fifo.vhd  cmp_add_3_clk.vhd  cmp_conv_wrapper.vhd  cmp_line_engine.vhd  cmp_line_proc.vhd  cmp_multiAdd.vhd  cmp_pix_out_proc.vhd  cmp_reconst.vhd  cmp_wrapper_fl_to_std.vhd  cmp_wrapper_std_to_fl.vhd  conv_pkg.vhd  tb_add_3_clk.vhd  tb_axi_fifo.vhd  tb_conv_wrapper.vhd  tb_line_engine.vhd  tb_line_proc.vhd  tb_multiAdd.vhd  tb_pix_out_proc.vhd  tb_reconst.vhd  tb_wrapper_fl_to_std.vhd  tb_wrapper_std_to_fl.vhd
A-Eye_FPGA/conv_v3/: add3clk.vhd  conv_wrapper.vhd  conv_wrapper_tb.vhd  line_engine.vhd  line_proc.vhd  multiAdd.vhd  pix_out_proc.vhd  reconst_std.vhd  std_package.vhd  tb_add3clk.vhd  tb_line_engine.vhd  tb_pix_out_proc.vhd
A-Eye_FPGA/diagrams/: .$fixed_point.drawio.bkp  .$reconst_chrono.drawio.bkp  AXI4-S.drawio  DMA data transfert for convolution.drawio  add3clk_chrono.drawio  adder_3_clk.drawio  archi_conv_axi_fifo.drawio  archi_v2.plantuml  architecture.plantuml  export_drawio.ps1  fixed_point.drawio  fixed_point_multiplication.drawio  reconst_chrono.drawio
A-Eye_FPGA/vitis/: .analytics
A-Eye_FPGA/vitis/.metadata/: version.ini
A-Eye_FPGA/vitis/conv_gpio/: .cproject  .project  platform.spr  platform.tcl
A-Eye_FPGA/vitis/conv_gpio_app/: .cproject  .project
A-Eye_FPGA/vitis/conv_gpio_app_system/: .cproject  .project
A-Eye_FPGA/vitis/conv_v2/: .cproject  .project  platform.spr  platform.tcl
A-Eye_FPGA/vitis/conv_vitis/: .cproject  .project
A-Eye_FPGA/vitis/conv_vitis_system/: .cproject  .project  conv_vitis_system.sprj
A-Eye_Training/: README.md  airbus_training.ipynb  airbus_training.py  export_weights.ipynb  export_weights.py  shipsnet_training.ipynb  shipsnet_training.py  training_bw.py
A-Eye_ZyboPetaFromVivado/: petalinux_hardware_descr.hdf  readme.md
A-Eye_ZyboPetaFromVivado/BACKUP_file/: image.ub  system.dtb
A-Eye_petaFromVivado/: init.sh
A-Eye_petaFromVivado/.petalinux/: metadata
A-Eye_root/: README.md  comVideo.sh  demo.sh  demo_mqtt.sh  demo_video.sh  get_rand_img.py  init.sh  jpgtobmp.py  launchAI.sh  launchServer.sh  livePict.sh  manualCapt.sh  paho_install.sh  read_video.py  requirement.sh  requirements.txt  restart.sh  webcam.conf
A-Eye_root/A-Eye_Communication/: CMakeLists.txt  Doxyfile  README.md  mainPage.txt  struct_allocation.h
A-Eye_root/A-Eye_Communication/Debug/: testEncodageTM.c
A-Eye_root/A-Eye_Communication/Interpreteur/: interpreteur.c  interpreteur.h
A-Eye_root/A-Eye_Communication/Server/: tcp_server.c
A-Eye_root/A-Eye_Communication/TC/: decodageTC.c  decodageTC.h
A-Eye_root/A-Eye_Communication/TM/: encodageTM.c
A-Eye_root/A-Eye_Communication/src/: CMakeLists.txt  mqtt_publish.cpp  tcp_server.c  tcp_server.cpp
A-Eye_root/A-Eye_Communication/src/Circular_buffer/: circular_buffer.h
A-Eye_root/A-Eye_Communication/src/Debug/: script_debug_encodageTM.c  script_debug_interpreteur.c  testCbuf.c  testDecodageTC.c  testInterpreteur.c  testPthreads.c
A-Eye_root/A-Eye_Communication/src/Interpreteur/: CMakeLists.txt  interpreteur.c  interpreteur.h
A-Eye_root/A-Eye_Communication/src/Interpreteur/Circular_buffer/: CMakeLists.txt  circular_buffer.c
A-Eye_root/A-Eye_Communication/src/Server/: CMakeLists.txt  tcp_server.h
A-Eye_root/A-Eye_Communication/src/TC/: CMakeLists.txt
A-Eye_root/A-Eye_Communication/src/TM/: CMakeLists.txt  encodageTM.c  encodageTM.h
A-Eye_root/A-Eye_Communication/src/mqtt/: mqtt.cpp
A-Eye_root/A-Eye_Visor/: CMakeLists.txt  README.md  mainPage.txt  weights_q_86.json
A-Eye_root/A-Eye_Visor/format/: README.md  format_layer_10.py  format_layer_11.py  format_layer_12.py  format_layer_17.py  format_layer_18.py  format_preprocessed.py
A-Eye_root/A-Eye_Visor/json/: CMakeLists.txt  json.h
A-Eye_root/A-Eye_Visor/preprocess/: preprocess.c
A-Eye_root/A-Eye_Visor/src/: AI.c  AI.cpp  CMakeLists.txt
A-Eye_root/A-Eye_Visor/src/json/: CMakeLists.txt  json.c  json.cpp  json.hpp  json_test.c
A-Eye_root/A-Eye_Visor/src/preprocess/: CMakeLists.txt  README.md  preprocess.cpp  preprocess.h  preprocess.hpp  preprocess_test.c
(+1248 files in other folders)
